Closed Bug 129635 Opened 23 years ago Closed 23 years ago

Leaking PL_DHashTable and children

Categories

(Core :: Security: CAPS, defect, P2)

x86
Windows 2000
defect

Tracking

()

VERIFIED FIXED
mozilla1.0

People

(Reporter: alecf, Assigned: security-bugs)

References

Details

Attachments

(1 file)

With spacetrace, I discovered that we're leaking a ton of hashtables out of caps. basically we leak every DomainPolicy table, every ClassPolicy, and every ClassPolicy's hashtable. The solution was just to write a destructor for DomainPolicy.. patch forthcoming.
Attached patch Add a destructorSplinter Review
here's the patch, can I get a review?
Status: NEW → ASSIGNED
Keywords: mozilla1.0
Priority: -- → P2
Target Milestone: --- → mozilla1.0
Comment on attachment 73153 [details] [diff] [review] Add a destructor Thanks, Alec! r=mstoltz. I usually bug jst or jband for sr's, but anyone will do. Do you want me to drive this one in? I can take it.
Attachment #73153 - Flags: review+
Assigning to me.
Assignee: alecf → mstoltz
Status: ASSIGNED → NEW
Comment on attachment 73153 [details] [diff] [review] Add a destructor sr=vidur
Attachment #73153 - Flags: superreview+
Comment on attachment 73153 [details] [diff] [review] Add a destructor a=asa (on behalf of drivers) for checkin to the 1.0 trunk
Attachment #73153 - Flags: approval+
*** Bug 127913 has been marked as a duplicate of this bug. ***
Looks like Alec checked in the fix.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Marking verified as per above developer comments.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: