fix bug 129635 - write a destructor for DomainPolicy so that the hashtable is destroyed (and not leaked!) r=mstoltz, sr=vidur, a=asa